BlueToolTestforJoy/blue_dir/include/VB7/HidDfuAPI.vb

' HidDfuAPI.vb : Declares the DLL functions for vb7.
' Generated by C:\work_bluesuite_2_5\p4\common\hosttools\bluesuite_2_5\prodtest\scripts\extract_tt_api.pl from HidDfu.h;  at 03/02/14 - 11:13:42

Imports System.Text

Module HidDfu
Declare Function hidDfuGetVersion Lib "HidDfu.dll" (ByRef major As Short, ByRef minor As Short, ByRef release As Short, ByRef build As Short) As Integer
Declare Function hidDfuConnect Lib "HidDfu.dll" (ByVal vid As Short, ByVal pid As Short, ByVal usage As Short, ByVal usagePage As Short) As Integer
Declare Function hidDfuDisconnect Lib "HidDfu.dll" () As Integer
Declare Function hidDfuBackup Lib "HidDfu.dll" (ByVal fileName As String) As Integer
Declare Function hidDfuUpgrade Lib "HidDfu.dll" (ByVal fileName As String) As Integer
Declare Function hidDfuResetDevice Lib "HidDfu.dll" () As Integer
Declare Function hidDfuGetProgress Lib "HidDfu.dll" () As Byte
Declare Function hidDfuGetResult Lib "HidDfu.dll" () As Integer
Declare Function hidDfuGetLastError Lib "HidDfu.dll" () As IntPtr
Declare Function hidDfuSendCommand Lib "HidDfu.dll" (ByRef data As Byte, ByVal length As Integer) As Integer
End Module
